--- a/style/index.css
+++ b/style/index.css
@@ -1,13 +1,93 @@
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto-Regular.ttf);
+}
 body{
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 7fr;
 }
 .sidebar{
     background-color: #131722;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr auto 3fr auto 4fr;
+    justify-content: center;
+    font-family: Roboto;
+}
+.wallet-status{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    align-self: flex-end;
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 40px 120px;
+    grid-template-rows: 40px;
+}
+.circle{
+    border-radius: 50%;
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.circle img{
+    color: #031b6d;
+    height: 25px;
+    width: 25px;
+}
+.wallet-status-text{
+    display: grid;
+    grid-template-rows: auto;
+    justify-content: start;
+    padding-left: 5px;
+    gap: 5px;
+}
+.wallet-status-text h2,h3{
+    margin: 0px;
+    font-size: 12px;
+    align-self: flex-end;
+}
+.wallet-status-text h2{
+    color: #6d6e71;
+
+}
+.wallet-status-text h3{
+    color: #ecedee;
+}
+hr{
+    width: 100%;
+    height: 1px;
+    border: none;
+    background-color: #24272c;
+}
+.first-sidebar-menu{
+    display: grid;
+    grid-template-columns: 160px;
+    grid-template-rows: auto;
+    justify-content: center;
+}
+.first-sidebar-menu input,li{
+    width: 140px;
+    height: 19px;
+    border-radius: 10px;
+    padding: 15px;
+    width: 100%;
+}
+.first-sidebar-menu input{
+}
+.first-sidebar-menu ul{
+    margin: 0px;
+    padding: 0px;
+}
+.first-sidebar-menu ul li{
+    list-style-type: none;
+}
+.first-sidebar-menu ul li a{
+    text-decoration: none;
 }
 .dashboard{
     background-color: #090c13;
