--- a/style/index.css
+++ b/style/index.css
@@ -1,94 +1,97 @@
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto-Regular.ttf);
+:root {
+
+    /*WALLET STATUS*/
+    --walletstatus-fz: clamp(0.5rem, 1vw, 2vw);
 }
-body{
+
+body {
     margin: 0px;
     padding: 0px;
+    width: 100vw;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    grid-template-rows: 100%;
+}
+
+.sidebar {
     width: 100%;
     height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 7fr;
-}
-.sidebar{
     background-color: #131722;
     display: grid;
+    grid-template-rows: 15% 1% 7% 35% 1% 40%;
     grid-template-columns: 100%;
-    grid-template-rows: 1fr auto 3fr auto 4fr;
-    justify-content: center;
-    font-family: Roboto;
-}
-.wallet-status{
-    padding-top: 15px;
-    padding-bottom: 15px;
-    align-self: flex-end;
-    justify-self: center;
-    display: grid;
-    grid-template-columns: 40px 120px;
-    grid-template-rows: 40px;
-}
-.circle{
-    border-radius: 50%;
-    background-color: #d9d9d9;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
-.circle img{
-    color: #031b6d;
-    height: 25px;
-    width: 25px;
-}
-.wallet-status-text{
-    display: grid;
-    grid-template-rows: auto;
-    justify-content: start;
-    padding-left: 5px;
-    gap: 5px;
-}
-.wallet-status-text h2,h3{
-    margin: 0px;
-    font-size: 12px;
-    align-self: flex-end;
-}
-.wallet-status-text h2{
-    color: #6d6e71;
 
-}
-.wallet-status-text h3{
-    color: #ecedee;
-}
-hr{
-    width: 100%;
-    height: 1px;
+.sidebar_firstline {
     border: none;
-    background-color: #24272c;
+    background-color: #383838;
+    height: 1px;
+    width: 100%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
-.first-sidebar-menu{
+
+.sidebar__secondline {
+    border: none;
+    background-color: #383838;
+    height: 1px;
+    width: 70%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.sidebar__walletstatus {
+    justify-self: center;
+    align-self: flex-end;
+    width: 75%;
+    height: 50%;
     display: grid;
-    grid-template-columns: 160px;
-    grid-template-rows: auto;
+    grid-template-columns: 30% 70%;
     justify-content: center;
+    align-items: center;
 }
-.first-sidebar-menu input,li{
-    width: 140px;
-    height: 19px;
-    border-radius: 10px;
-    padding: 15px;
+
+.sidebar__walletstatus__img {
     width: 100%;
 }
-.first-sidebar-menu input{
+
+.sidebar__walletstatus__text {
+    width: 100%;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 10%;
 }
-.first-sidebar-menu ul{
+
+.sidebar__walletstatus__text h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: var(--walletstatus-fz);
     margin: 0px;
-    padding: 0px;
 }
-.first-sidebar-menu ul li{
-    list-style-type: none;
+
+.sidebar__walletstatus__text h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: var(--walletstatus-fz);
+    margin: 0px;
 }
-.first-sidebar-menu ul li a{
-    text-decoration: none;
+
+.sidebar__search {
+    height: 60%;
+    width: 70%;
+    padding: 5%;
+    border: none;
+    border-radius: 25%;
+
+    background-color: #090c13;
+    justify-self: center;
+    align-self: center;
+    display: grid;
+    grid-template-columns: 15% 75%;
+    justify-content: space-around;
 }
-.dashboard{
+
+.mainbody {
     background-color: #090c13;
 }
