--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,6 @@
     /*WALLET STATUS*/
     --walletstatus-fz: clamp(0.5rem, 1vw, 2vw);
 }
-
 body {
     margin: 0px;
     padding: 0px;
@@ -11,75 +10,63 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 15% 85%;
-    grid-template-rows: 100%;
 }
-
 .sidebar {
     width: 100%;
     height: 100vh;
     background-color: #131722;
     display: grid;
-    grid-template-rows: 15% 3% 7% 35% 3% 37%;
+    grid-template-rows: 15% 3% 7% 45% 3% 27%;
     grid-template-columns: 100%;
-    justify-content: center;
-    align-items: center;
 }
-
-.sidebar_firstline {
+.sidebar__line{
     border: none;
     background-color: #383838;
     height: 1px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.sidebar__line--hundred {
     width: 100%;
-    margin-top: 2%;
-    margin-bottom: 2%;
 }
-
-.sidebar__secondline {
-    border: none;
-    background-color: #383838;
-    height: 1px;
+.sidebar__line--seventeen {
     width: 70%;
-    margin-top: 2%;
-    margin-bottom: 2%;
 }
-
 .sidebar__walletstatus {
-    justify-self: center;
-    align-self: flex-end;
+    /*SELF*/
     width: 75%;
     height: 50%;
+    margin: 3%;
+    justify-self: center;
+    align-self: flex-end;
+    /*SONS*/
     display: grid;
     grid-template-columns: 30% 70%;
     justify-content: center;
     align-items: center;
 }
-
 .sidebar__walletstatus__img {
     width: 100%;
 }
-
 .sidebar__walletstatus__text {
     width: 100%;
     display: grid;
     grid-template-rows: auto;
     gap: 10%;
 }
-
-.sidebar__walletstatus__text h2 {
+.sidebar__walletstatus__text__detail {
     font-family: Arial, Helvetica, sans-serif;
     font-size: var(--walletstatus-fz);
     margin: 0px;
+}
+.sidebar__walletstatus__text__detail--grey{
     color: #868686;
 }
-
-.sidebar__walletstatus__text h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: var(--walletstatus-fz);
-    margin: 0px;
+.sidebar__walletstatus__text__detail--white{
     color: #ffffff;
 }
-
 .sidebar__search {
+    /*SELF*/
     height: 50%;
     width: 70%;
     padding: 2%;
@@ -89,6 +76,7 @@ body {
     border-bottom: solid #3a3d42;
     justify-self: center;
     align-self: center;
+    /*SONS*/
     display: grid;
     grid-template-columns: 15% 75%;
     justify-content: center;
@@ -96,8 +84,6 @@ body {
 }
 .sidebar__search__img{
     width: 50%;
-    justify-self: center;
-    align-self: center;
 }
 .sidebar__search_submit{
     color: #b5bdc9;
@@ -107,24 +93,29 @@ body {
     font-size: var(--walletstatus-fz);
 }
 .sidebar__menu{
-    width: 100%;
+    /*SELF*/
+    width: 74.2%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     list-style: none;
     justify-self: center;
     align-self: center;
+    /*SONS*/
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 10%;
+    justify-content: space-around;
     align-items: center;
 }
 .sidebar__menu__item{
-    height: 10%;
-    width: 70%;
-    padding: 2%;
-    margin-top: 2%;
+    /*SELF*/
+    padding: 2.74%;
     border-radius: 10px;
     background-color: transparent;
     justify-self: center;
     align-self: center;
+    /*SONS*/
     display: grid;
     grid-template-columns: 15% 75%;
     justify-content: center;
