--- a/style/index.css
+++ b/style/index.css
@@ -2,7 +2,11 @@
 
     /*WALLET STATUS*/
     --walletstatus-fz: clamp(0.5rem, 1vw, 2vw);
+
+    /*MAIN BODY*/
+
 }
+
 body {
     margin: 0px;
     padding: 0px;
@@ -11,6 +15,7 @@ body {
     display: grid;
     grid-template-columns: 15% 85%;
 }
+
 .sidebar {
     width: 100%;
     height: 100vh;
@@ -22,7 +27,7 @@ body {
 .sidebar__line{
     border: none;
     background-color: #383838;
-    height: 2px;
+    height: 1px;
     margin-top: 1%;
     margin-bottom: 1%;
 }
@@ -131,13 +136,16 @@ body {
 }
 .sidebar__menu__item__text{
     text-decoration: none;
-    color: #b5bdc9;
+    color: #495a73;
     font-family: Arial, Helvetica, sans-serif;
     font-size: var(--walletstatus-fz);
     pointer-events: none;
 }
 .sidebar__menu__item--choose{
     background-color: #007aff;
+}
+.sidebar__menu__item__text--choose{
+    color: white;
 }
 .sidebar__menu__item--resize{
     height: 12.967%;
@@ -148,4 +156,31 @@ body {
 
 .mainbody {
     background-color: #090c13;
+    width: 85vw;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 7vh 7vh 86vh;
+    grid-template-columns: 85vw;
+}
+.mainbody__itempage{
+    width: 83vw;
+    height: 5vh;
+    padding: 1vh 1vw 1vh 1vw;
+    display: grid;
+    grid-template-columns: 95% 5%;
+    align-items: flex-end;
+}
+.mainbody__itempage__name__text{
+    font-size: clamp(1vw, 1.5vw, 2.5vw);;
+    color: white;
+    margin: 0%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.mainbody__itempage__nick{
+    height: 70%;
+    background-color: black;
+    border-radius: 50%;
+}
+.mainbody__itempage__nick__text{
+    margin: 0%;
 }
