--- a/style/index.css
+++ b/style/index.css
@@ -163,24 +163,60 @@ body {
     grid-template-columns: 85vw;
 }
 .mainbody__itempage{
-    width: 83vw;
+    width: 81vw;
     height: 5vh;
-    padding: 1vh 1vw 1vh 1vw;
+    padding: 1vh 2vw 1vh 2vw;
     display: grid;
-    grid-template-columns: 95% 5%;
+    grid-template-columns: 78.95vw 4.05vw;
     align-items: flex-end;
+    border: 1px solid #232323;
+    border-style: none none solid none;
 }
 .mainbody__itempage__name__text{
-    font-size: clamp(1vw, 1.5vw, 2.5vw);;
+    font-size: clamp(1vw, 1.5vw, 2.5vw);
     color: white;
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
 }
 .mainbody__itempage__nick{
-    height: 70%;
+    justify-self: end;
     background-color: black;
+    width: 5vh;
+    height: 5vh;
     border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .mainbody__itempage__nick__text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: clamp(0.5vw, 1vw, 1.5vw);
+    color: white;
     margin: 0%;
+}
+.mainbody__menu{
+    width: 83vw;
+    height: 5vh;
+    padding: 1vh 0vw 1vh 0vw;
+    margin: 0vh 0vw 0vh 2vw;
+    border: 1px solid #232323;
+    border-style: none none solid none;
+    list-style-type: none;
+    display: inline-grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fill, 6vw);
+    gap: 5vw;
+}
+.mainbody__menu__item{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: clamp(0.5vw, 1vw, 1.5vw);
+    color: #ababac;
+    align-self: center;
+    justify-self: center;
+}
+.mainbody__menucontent{
+
 }
